# competitive_programming

./: CMakeLists.txt  LICENSE  initial_code.cpp
Initial code/: CMakeLists.txt  initial_code.cpp
codeforces/EducationalCodeforcesRound135/: A.cpp  B.cpp  C.cpp  D.cpp  G.cpp
