

cmake_minimum_required(VERSION 3.20)
project(competitive_programming)


set(CMAKE_CXX_STANDARD 17)

add_executable(competitive_programming initial_code.cpp)

add_executable(EDU135taskA ../codeforces/EducationalCodeforcesRound135/A.cpp)
add_executable(EDU135taskB ../codeforces/EducationalCodeforcesRound135/B.cpp)
add_executable(EDU135taskC ../codeforces/EducationalCodeforcesRound135/C.cpp)
add_executable(EDU135taskD ../codeforces/EducationalCodeforcesRound135/D.cpp)
add_executable(EDU135taskE ../codeforces/EducationalCodeforcesRound135/E.cpp)
add_executable(EDU135taskF ../codeforces/EducationalCodeforcesRound135/F.cpp)
add_executable(EDU135taskG ../codeforces/EducationalCodeforcesRound135/G.cpp)